fixed images on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -17,6 +17,11 @@ a {
   text-decoration: none;
 }
 
+img {
+  width: 100%;
+  height: auto;
+}
+
 a:hover {
   border-bottom: 1px dotted #43A047;
 }
